# anaface

./: .gitattributes  .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: build.yaml
src/anaface/: __init__.py
tests/: test_anaface.py
